feat: add annotation continues
